--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -1,10 +1,32 @@
 // mixin-home
 
+@mixin btn-principal-default {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $white !important;
+    background-color: $primary;
+    box-shadow: inset 0 0 0 0 $secondary;
+    transition: ease-out 0.3s;
+    width: 80px;
+    height: 2rem;
+    border-radius: 1.25rem;
+    border-color: transparent;
+    font-family: "Rubik", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+@mixin btn-principal-hover {
+    box-shadow: inset 80px 0 0 0 $secondary;
+    color: $blackFoundation !important;
+}
+
 @mixin article-card-style() {
     display: flex;
     align-items: center;
     padding: 0%;
-    width: 80% + 10 ;
+    width: 80% + 10;
     height: 5.625rem;
     border: solid 1px $gray-200;
     border-radius: 0.9375rem;
