--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,12 +11,16 @@ $font-family-sans-serif: 'Rubik', sans-serif;
     $font-weight-black: 900;    
 
 // Colors
-    $primary:  #BC2E36;
-    $secondary:#ECE768;
+    $primary:  #e73555;
+    $secondary:#ece768;
+    $tertiary: #292669;
     $white:    #fff !default;
+    $whiteSmoke: #f5f5f5;
+    $grayFoundation: #cfcfcf;
+    $blackFoundation:#363638;
     $gray-100: #f8f9fa !default;
     $gray-200: #e9ecef !default;
-    $gray-300: #dee2e6 !default;
+    $gray-300: #dee2e6 !default;    
     $gray-400: #ced4da !default;
     $gray-500: #adb5bd !default;
     $gray-600: #6c757d !default;
