--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -25,19 +25,39 @@
 @mixin article-card-style() {
     display: flex;
     align-items: center;
-    padding: 0%;
     width: 80% + 10;
-    height: 5.625rem;
-    border: solid 1px $gray-200;
-    border-radius: 0.9375rem;
-    background-color: $gray-100;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+    max-width: 320px;
+    height: 110px;
+    border: solid 2px $gray-300;
+    border-radius: 80px;
+
+    img {
+        margin-left: 20px;
+    }
+
+    .cards__p {
+        margin-left: 10px;
+        width: 100%;
+        max-width: 219px;
+    }
 }
-@mixin card-pleca-style {
-    width: 5px;
-    height: 20px + 10;
-    display: flex;
-    position: relative;
-    border-radius: 0 10px 10px 0;
-    background-color: $primary;
-}
+
+// @mixin article-card-style() {
+//     display: flex;
+//     align-items: center;
+//     padding: 0%;
+//     width: 80% + 10;
+//     height: 5.625rem;
+//     border: solid 1px $gray-200;
+//     border-radius: 0.9375rem;
+//     background-color: $gray-100;
+//     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+// }
+// // @mixin card-pleca-style {
+// //     width: 5px;
+// //     height: 20px + 10;
+// //     display: flex;
+// //     position: relative;
+// //     border-radius: 0 10px 10px 0;
+// //     background-color: $primary;
+// // }
