--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,6 @@
   .main__text {
     padding-top: 1.25rem;
   }
-  .preFooter__misc--l {
-    display: none;
-  }
-  .preFooter__misc--r {
-    display: none;
-  }
   .preFooter__ilust {
     display: none;
   }
@@ -33,12 +27,11 @@
     left: 0px !important;
     position: absolute;
   }
-  footer {
-    text-align: center;
-  }
-  footer .alignCenter {
-    display: flex;
-    justify-content: center;
+  .footer__ul {
+    padding: 0px;
+    display: block  !important;
+    flex-wrap: wrap;
+    list-style: none;
   }
 }
 
@@ -77,7 +70,6 @@ header .header__navStyle {
 }
 
 header .nav-link:hover {
-  font-weight: 500;
   color: #e73555 !important;
 }
 
@@ -251,8 +243,69 @@ header a {
 }
 
 footer {
+  grid-area: "footer";
   background-color: #e73555;
   width: 100%;
+}
+
+footer .nombreFundacion {
+  color: #363638;
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: 1.125rem;
+  width: 100%;
+  max-width: 104px;
+  text-align: center;
+  align-content: center;
+  text-align: left;
+}
+
+footer .nombreFundacion .nombreFundacion__bold {
+  font-weight: 600;
+}
+
+footer .misc__white {
+  margin-top: 10px;
+  height: 2px;
+  width: 28px;
+  background-color: white;
+  border-color: transparent;
+  border-radius: 4px;
+}
+
+footer p {
+  margin-top: 10px;
+  margin-bottom: 0px !important;
+}
+
+footer .footer___socialMedia {
+  margin-top: 10px;
+}
+
+footer .footer__col--ctr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+footer .footer__ul {
+  padding: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+footer .footer__ul li {
+  padding: 5px;
+}
+
+footer .footer__ul li a {
+  font-size: 1rem;
+  text-decoration: none;
+  color: #fff;
+}
+
+footer .footer__ul li a:hover {
+  color: #e9ecef;
 }
 
 /*!
