--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,5 @@
 @import "../sass/mediaquery";
+@import "../sass/mediaquery--Contact";
 @import "../sass/mixin";
 @import "../sass/variables";
 @import "../sass/contact";
