--- a/sass/_mediaquery.scss
+++ b/sass/_mediaquery.scss
@@ -42,6 +42,10 @@ main {
     left: 0px !important;
     position: absolute;
 }
+.container__footer--ul{
+    justify-content: flex-start !important;
+}
+
 
 .footer__ul {
     padding: 0px;
