--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -218,6 +218,12 @@ footer {
         margin-bottom: 20px;
     }
 
+    .container__footer--ul{
+        display: flex;
+        justify-content: flex-end;
+    }
+
+
     .footer__ul {
         padding: 0px;
         display: flex;
