--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,7 +1,9 @@
 @import "../sass/mediaquery";
-@import "../sass/mediaquery--Contact";
+@import "../sass/mediaquery--contact";
+@import "../sass/mediaquery--donar";
 @import "../sass/mixin";
 @import "../sass/variables";
+@import "../sass/donar";
 @import "../sass/contact";
 @import "../sass/home";
 @import "../node_modules/bootstrap/scss/bootstrap";
