--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .gridBody {
@@ -16,20 +16,54 @@
     grid-template-rows: auto auto auto auto auto;
 }
 
-header {
+.home__header {
     grid-area: "header";
+    padding-top:1.25rem;
+    padding-bottom: 1.25rem;
+    width: 100%;
+    height: auto;
+    z-index: 1000;
+    
+    border-color: $gray-200 !important;
+    border-bottom: 2px solid;
 
-    .header__navStyle {
-        background-color: $white;
-        border-bottom: solid 1px $gray-200;
-    }
+    .header__nav {
+        
+        margin-left: 10%;
+        margin-right: 10%;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        
+        .header__nav--logo {
+            display: flex;
+            align-items: center;
+            justify-items: flex-end !important;
+            margin: 5px;
+        }
+        .container__nav--ul {
+            display: flex;
 
-    .nav-link:hover {
-        color: $primary !important;
-    }
+            .header__nav--ul {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                width: 100%;
+                padding: 0px !important;
+                margin: 0px !important;
+                align-items: center;
+                list-style: none;
+                a {
+                    color: $blackFoundation;
+                    margin: 0.25rem;
+                }
 
-    a {
-        text-decoration: none;
+                a:hover{
+                    color:$primary;
+                }
+            }
+        }
     }
 }
 
@@ -40,6 +74,24 @@ header {
 .nav__button:hover {
     @include btn-principal-hover;
 }
+
+// header {
+//     grid-area: "header";
+
+//     .header__navStyle {
+//         background-color: $white;
+//         border-bottom: solid 1px $gray-200;
+//     }
+
+//     .nav-link:hover {
+//         color: $primary !important;
+//     }
+
+//     a {
+//         text-decoration: none;
+//     }
+// }
+
 
 // main
 
@@ -218,32 +270,29 @@ footer {
         margin-bottom: 20px;
     }
 
-    .container__footer--ul{
+    .container__footer--ul {
         display: flex;
         justify-content: flex-end;
     }
 
-
     .footer__ul {
         padding: 0px;
         display: flex;
-        flex-wrap:wrap;
+        flex-wrap: wrap;
         list-style: none;
-        
-        
+
         li {
             padding: 5px;
-            
+
             a {
                 font-size: 1rem;
                 text-decoration: none;
-                color:$white
+                color: $white;
             }
 
             a:hover {
                 color: $gray-200;
             }
-            
         }
     }
 }
