--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,9 +1,11 @@
 @import "../sass/mediaquery";
 @import "../sass/mediaquery--contact";
 @import "../sass/mediaquery--donar";
+@import "../sass/mediaquery--voluntariado";
 @import "../sass/mixin";
 @import "../sass/variables";
 @import "../sass/home";
 @import "../sass/donar";
 @import "../sass/contact";
+@import "../sass/voluntariado";
 @import "../node_modules/bootstrap/scss/bootstrap";
