--- a/css/styles.css
+++ b/css/styles.css
@@ -622,15 +622,15 @@ footer .footer__ul li a:hover {
 
 .img__voluntariado--section {
   width: 100%;
-  max-width: 150px !important;
+  max-width: 230px !important;
 }
 
-.nav__button {
+.vol__buttom--blue {
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff !important;
-  background-color: #e73555;
+  background-color: #292669;
   box-shadow: inset 0 0 0 0 #ece768;
   transition: ease-out 0.3s;
   width: 80px;
@@ -640,6 +640,73 @@ footer .footer__ul li a:hover {
   font-family: "Rubik", sans-serif;
   font-size: 1rem;
   font-weight: 400;
+}
+
+.vol__buttom--blue:hover {
+  box-shadow: inset 80px 0 0 0 #ece768;
+  color: #363638 !important;
+}
+
+.vol__buttom--yellow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #363638 !important;
+  background-color: #ece768;
+  box-shadow: inset 0 0 0 0 #e73555;
+  transition: ease-out 0.3s;
+  width: 80px;
+  height: 2rem;
+  border-radius: 1.25rem;
+  border-color: transparent;
+  font-family: "Rubik", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.vol__buttom--yellow:hover {
+  box-shadow: inset 80px 0 0 0 #e73555;
+  color: #fff !important;
+}
+
+.voluntariado__article {
+  display: flex;
+  justify-content: center;
+}
+
+.article__h2 {
+  font-weight: 700;
+}
+
+.article__h2--primary {
+  color: #e73555;
+}
+
+.article__container {
+  display: flex;
+  justify-content: center;
+  height: auto;
+  border: 2px solid #dee2e6;
+  border-radius: 40px;
+}
+
+.img__aliados {
+  width: 100%;
+  max-width: 380px;
+}
+
+.separador {
+  height: 2px;
+  width: 100%;
+  background-color: #dee2e6;
+}
+
+.logos {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  max-width: 100px;
 }
 
 /*!
