--- a/sass/_voluntariado.scss
+++ b/sass/_voluntariado.scss
@@ -36,11 +36,105 @@
     color: $tertiary;
 }
 
+
+
+
+
+// section
+
+
+
 .img__voluntariado--section {
     width: 100%;
-    max-width: 150px !important;
+    max-width: 230px !important;
 }
 
-.nav__button {
-    @include btn-principal-default
+.vol__buttom--blue {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $white !important;
+    background-color: $tertiary;
+    box-shadow: inset 0 0 0 0 $secondary;
+    transition: ease-out 0.3s;
+    width: 80px;
+    height: 2rem;
+    border-radius: 1.25rem;
+    border-color: transparent;
+    font-family: "Rubik", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.vol__buttom--blue:hover {
+    box-shadow: inset 80px 0 0 0 $secondary;
+    color: $blackFoundation !important;
+}
+
+.vol__buttom--yellow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $blackFoundation !important;
+    background-color: $secondary;
+    box-shadow: inset 0 0 0 0 $primary;
+    transition: ease-out 0.3s;
+    width: 80px;
+    height: 2rem;
+    border-radius: 1.25rem;
+    border-color: transparent;
+    font-family: "Rubik", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.vol__buttom--yellow:hover {
+    box-shadow: inset 80px 0 0 0 $primary;
+    color: $white !important;
+}
+
+
+// article 
+
+.voluntariado__article {
+    display: flex;
+    justify-content: center;
+}
+
+.article__h2 {
+    font-weight: $font-weight-bold;
+}
+
+.article__h2--primary {
+    color: $primary;
+}
+
+
+.article__container {
+    display: flex;
+    justify-content: center;
+    height: auto;
+    border: 2px solid $gray-300;
+    border-radius: 40px;
+}
+
+.img__aliados {
+    width: 100%;
+    max-width: 380px;
+}
+
+.separador {
+    height: 2px;
+    width: 100%;
+    background-color: $gray-300;
+
+}
+
+.logos {
+    display: flex;
+    justify-items: center;
+    text-align: center;
+    width: 100%;
+    max-width: 100px;
+
 }
