Web site completo

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,10 +2,12 @@
 @import "../sass/mediaquery--contacto";
 @import "../sass/mediaquery--donar";
 @import "../sass/mediaquery--voluntariado";
+@import "../sass/mediaquery--nosotros";
 @import "../sass/mixin";
 @import "../sass/variables";
 @import "../sass/home";
 @import "../sass/donar";
 @import "../sass/contacto";
 @import "../sass/voluntariado";
+@import "../sass/nosotros";
 @import "../node_modules/bootstrap/scss/bootstrap";
